2008-09-17 Roman
- /DB/MySQL: For UTF codepages length multiplication to 2 for string is made.
- FIX:/UI/QTCfg: Save on exit is fixed.
- FIX:/SYS: Fixed DB fields set is fixed for TArchives, TBDS and TTransports.
- FIX:/SYS/Elements: Short DB fields length atribute is fixed.


2008-09-16 Roman
- FIX:/UI/VCAEngune: Two level and more widgets path generation is fixed.


2008-09-15 Roman
- !:/SYS: Self script 'mkdist' is added for fixed work 'make dist'.
- !:/SYS: RPM build spec file is updated for create noarch packages for ALTLinux.


2008-09-10 Roman OpenSCADA 0.6.2
- !!:/UI/QTStarter: Documentation and translation is updated and version 1.5.1 is relised.
- !!:/UI/QTCfg: Documentation and translation is updated and version 1.6.0 is relised.
- !!:/UI/VCAEngine: Documentation and translation is updated and version 0.7.0 is relised.
- !!:/UI/Vision: Documentation and translation is updated and version 0.7.0 is relised.
- !!:/UI/WebVision: Documentation and translation is updated and version 0.4.0 is relised.
- !!:/UI/WebCfg: Documentation and translation is updated and version 1.5.1 is relised.
- !!:/SYS: Add release 0.6.2 anounce documents.
- !!:/SYS: Updated API and TODO documents.


2008-09-10 Maxim
- FIX:/UI/WebVision: Filling of the figures is fixed for primitive ElFigure.


2008-09-09 Roman
- !!:/Archive/FSArch: Documentation and translation is updated and version 1.0.0 is relised.
- !!:/Archive/DBArch: Documentation and translation is updated and version 0.7.0 is relised.
- !!:/DB/MySQL: Documentation and translation is updated and version 1.4.0 is relised.
- !!:/DB/SQLite: Documentation and translation is updated and version 1.4.0 is relised.
- !!:/DB/DBF: Documentation and translation is updated and version 1.9.0 is relised.
- !!:/DB/FireBird: Documentation and translation is updated and version 0.8.0 is relised.
- !!:/DAQ/BlockCalc: Documentation and translation is updated and version 1.1.0 is relised.